# cfinanceiro-backend

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0778abf77b24_create_incomes_table.py  45380dea57d9_create_users_table.py  6e87fff6a760_create_categories_table.py  a789c390e2ea_create_users_table.py  b632d3214a1e_create_table_incomes.py  e24b86f280c5_create_entries_table.py  f7a55a0c2c7d_create_table_users.py
financial-control/: main.py
financial_control/: main.py
financial_control/apis/: base.py  entry.py  income.py  login.py  user.py
financial_control/core/: config.py  security.py  utils.py
financial_control/database/: all_models.py  base_model.py  config.py
financial_control/database/models/: category.py  entry.py  income.py  users.py
financial_control/models/: income.py  users.py
financial_control/routers/: route.py
financial_control/schemas/: entry.py  income.py  token.py  user.py
financial_control/services/: entry.py  income.py  user.py
tests/: example_test.py
