[tool.poetry]
name = "financial-control"
version = "0.1.0"
description = ""
authors = ["Aristides Neto <aristidesbneto@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_control"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
mysql-connector-python = "^8.0.33"
sqlalchemy = "^2.0.17"
pymysql = "^1.1.0"
alembic = "^1.11.1"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
